style: fix layout issues

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -270,7 +270,8 @@
         display: inline-block;
         width: calc(100% - 28px);
         background: #e6eef8;
-        box-shadow: 0 1px 4px 0 #e5e9f2;
+        -webkit-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.06);
+        box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.06);
         border-radius: 8px;
         border-radius: 8px;
         margin-bottom: 24px;
